--- a/_config.yml
+++ b/_config.yml
@@ -205,8 +205,8 @@ jekyll-archives:
 
 scholar:
 
-  last_name: Einstein
-  first_name: [Albert, A.]
+  last_name: Carreira
+  first_name: [Carolina, C.]
 
   style: apa
   locale: en
