--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: # the website title (if blank, full name will be used instead)
+title: Carolina Carreira # the website title (if blank, full name will be used instead)
 first_name: Carolina
-middle_name: M.
+middle_name: #M.
 last_name: Carreira
 email: carolina.carreira@tecnico.ulisboa.pt
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
