--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ footer_text: >
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: /assets/img/logo.png #⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: logo.png #⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://carolinacc.github.io # the base hostname & protocol for your site
+url: https://carolinacarreira.github.io # the base hostname & protocol for your site
 baseurl: / # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -54,9 +54,9 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: CarolinaCC
+github_username: CarolinaCarreira
 gitlab_username: # your GitLab user name
-twitter_username: ccarolcarreira
+twitter_username: carolinacarreira
 linkedin_username: carolina-carreira-72595449/
 scholar_userid: # your Google Scholar ID
 orcid_id: # your ORCID ID
