--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: CarolinaCarreira
 gitlab_username: # your GitLab user name
-twitter_username: carolinacarreira
+twitter_username: ccarolcarreira
 linkedin_username: carolina-carreira-72595449/
 scholar_userid: # your Google Scholar ID
 orcid_id: # your ORCID ID
