--- a/_config.yml
+++ b/_config.yml
@@ -74,8 +74,8 @@ stackoverflow_id: #your stackoverflow id
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 
-google_analytics:  # your google-analytics ID (format: UA-XXXXXXXXX)
-google_site_verification:  # your google-site-verification ID (Google Search Console)
+google_analytics: G-YNC8X2S0Y0 # your google-analytics ID (format: UA-XXXXXXXXX)
+google_site_verification:  bVSwGEpv8vGi5zje6h60TX3T0s0IKpd_SIWbVg2sXzk # your google-site-verification ID (Google Search Console)
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 
