update the description

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ github_username: CarolinaCarreira
 gitlab_username: # your GitLab user name
 twitter_username: ccarolcarreira
 linkedin_username: carolina-carreira-72595449/
-scholar_userid: # your Google Scholar ID
+scholar_userid: AzWvSdIAAAAJ
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
