--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,6 +39,11 @@ jobs:
           ruby-version: '3.1' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+
+      # Install ImageMagick - this is what was missing!
+      - name: Install ImageMagick
+        run: sudo apt-get update && sudo apt-get install -y imagemagick libmagickwand-dev
+        
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
